Enhance status snapshot with queue metrics

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -77,10 +77,15 @@
                 <button id="refresh-status" type="button">Actualiser</button>
               </div>
             </div>
+            <div class="queues-summary" id="jobs-queues"></div>
             <div class="jobs-columns">
               <div>
                 <h3>En cours</h3>
                 <ul id="jobs-running" class="job-list"></ul>
+              </div>
+              <div>
+                <h3>En attente</h3>
+                <ul id="jobs-queued" class="job-list"></ul>
               </div>
               <div>
                 <h3>Terminés</h3>
