--- a/app/web/index.html
+++ b/app/web/index.html
@@ -73,6 +73,7 @@
             <div class="panel-header">
               <h2>Jobs</h2>
               <div class="actions">
+                <button id="stop-daemon" type="button" class="danger">Arrêter</button>
                 <button id="restart-daemon" type="button" class="danger">Redémarrer</button>
                 <button id="refresh-status" type="button">Actualiser</button>
               </div>
