Adjust editor file paths and add tests

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -196,6 +196,7 @@
 
     <div id="notification" role="status" aria-live="polite"></div>
 
+    <script src="path_utils.js" defer></script>
     <script src="app.js" defer></script>
   </body>
 </html>
