Add daemon resource metrics to status endpoints

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -71,7 +71,10 @@
         >
           <section class="panel" id="jobs-panel">
             <div class="panel-header">
-              <h2>Jobs</h2>
+              <div class="panel-title">
+                <h2>Jobs</h2>
+                <div id="jobs-metrics" class="jobs-metrics" hidden></div>
+              </div>
               <div class="actions">
                 <button id="stop-daemon" type="button" class="danger">Arrêter</button>
                 <button id="restart-daemon" type="button" class="danger">Redémarrer</button>
