Add calendar feed refresh controls

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -159,6 +159,7 @@
                   <span id="calendar-window-label" class="calendar-window-label" aria-live="polite"></span>
                   <button id="calendar-next" type="button" aria-label="Fenêtre suivante">▶</button>
                 </div>
+                <button id="refresh-calendar-feed" type="button">Rafraîchir le flux</button>
                 <button id="refresh-calendar" type="button">Actualiser</button>
               </div>
             </div>
