--- a/app/web/index.html
+++ b/app/web/index.html
@@ -182,6 +182,13 @@
                 <input id="calendar-rating-max" name="rating-max" type="number" step="0.1" min="0" max="10" />
               </div>
 
+              <label for="calendar-votes-min">Votes IMDB (min/max)</label>
+              <div class="calendar-range">
+                <input id="calendar-votes-min" name="votes-min" type="number" step="100" min="0" />
+                <span>–</span>
+                <input id="calendar-votes-max" name="votes-max" type="number" step="100" min="0" />
+              </div>
+
               <label for="calendar-language">Langue</label>
               <input id="calendar-language" name="language" type="text" />
 
