Add vote badges to calendar entries

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -184,9 +184,25 @@
 
               <label for="calendar-votes-min">Votes IMDB (min/max)</label>
               <div class="calendar-range">
-                <input id="calendar-votes-min" name="votes-min" type="number" step="100" min="0" />
+                <input
+                  id="calendar-votes-min"
+                  name="votes-min"
+                  type="number"
+                  step="100"
+                  min="0"
+                  inputmode="numeric"
+                  placeholder="0"
+                />
                 <span>–</span>
-                <input id="calendar-votes-max" name="votes-max" type="number" step="100" min="0" />
+                <input
+                  id="calendar-votes-max"
+                  name="votes-max"
+                  type="number"
+                  step="100"
+                  min="0"
+                  inputmode="numeric"
+                  placeholder="20000"
+                />
               </div>
 
               <label for="calendar-language">Langue</label>
