Add OMDb calendar provider

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -175,14 +175,14 @@
               <label for="calendar-genres">Genres</label>
               <select id="calendar-genres" name="genres" multiple></select>
 
-              <label for="calendar-rating-min">Note IMDB (min/max)</label>
+              <label for="calendar-rating-min">Note OMDb/IMDb (min/max)</label>
               <div class="calendar-range">
                 <input id="calendar-rating-min" name="rating-min" type="number" step="0.1" min="0" max="10" />
                 <span>–</span>
                 <input id="calendar-rating-max" name="rating-max" type="number" step="0.1" min="0" max="10" />
               </div>
 
-              <label for="calendar-votes-min">Votes IMDB (min/max)</label>
+              <label for="calendar-votes-min">Votes OMDb/IMDb (min/max)</label>
               <div class="calendar-range">
                 <input
                   id="calendar-votes-min"
