Expose pending torrents in downloads tab

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -293,6 +293,55 @@
           aria-labelledby="tab-downloads"
           hidden
         >
+          <section class="panel" id="pending-torrents-panel">
+            <div class="panel-header">
+              <h2>Torrents en attente</h2>
+              <div class="panel-tools">
+                <div class="actions">
+                  <button id="refresh-pending-torrents" type="button">Rafraîchir</button>
+                </div>
+              </div>
+            </div>
+
+            <div class="download-list-table">
+              <div class="table-wrapper">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Nom</th>
+                      <th>Tracker</th>
+                      <th>Catégorie</th>
+                      <th>Ajouté</th>
+                      <th>Disponible le</th>
+                      <th>Identifiant</th>
+                    </tr>
+                  </thead>
+                  <tbody id="pending-validation-rows"></tbody>
+                </table>
+              </div>
+              <p class="hint" id="pending-validation-empty">Aucun torrent en attente de validation.</p>
+            </div>
+
+            <div class="download-list-table">
+              <div class="table-wrapper">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Nom</th>
+                      <th>Tracker</th>
+                      <th>Catégorie</th>
+                      <th>Ajouté</th>
+                      <th>Disponible le</th>
+                      <th>Identifiant</th>
+                    </tr>
+                  </thead>
+                  <tbody id="pending-download-rows"></tbody>
+                </table>
+              </div>
+              <p class="hint" id="pending-download-empty">Aucun torrent en attente de téléchargement.</p>
+            </div>
+          </section>
+
           <section class="panel" id="watchlist-panel">
             <div class="panel-header">
               <h2>Liste d'intérêt</h2>
