--- a/app/web/index.html
+++ b/app/web/index.html
@@ -51,6 +51,16 @@
           Logs
         </button>
         <button
+          id="tab-scheduler"
+          class="tab-button"
+          type="button"
+          role="tab"
+          aria-selected="false"
+          data-tab="scheduler"
+        >
+          Scheduler
+        </button>
+        <button
           id="tab-calendar"
           class="tab-button"
           type="button"
@@ -134,6 +144,26 @@
               </div>
             </div>
             <div id="logs-container" class="logs"></div>
+          </section>
+        </section>
+
+        <section
+          class="tab-panel"
+          data-tab="scheduler"
+          role="tabpanel"
+          aria-labelledby="tab-scheduler"
+          hidden
+        >
+          <section class="panel" id="scheduler-tasks-panel">
+            <div class="panel-header">
+              <h2>Scheduler</h2>
+              <div class="actions">
+                <button id="refresh-scheduler-tasks" type="button">Actualiser</button>
+              </div>
+            </div>
+            <div id="scheduler-task-list" class="scheduler-tasks">
+              <p class="hint">Aucun scheduler configuré.</p>
+            </div>
           </section>
         </section>
 
