Add validation flow for pending torrents

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -344,6 +344,7 @@
                       <th>Ajouté</th>
                       <th>Disponible le</th>
                       <th>Identifiant</th>
+                      <th>Actions</th>
                     </tr>
                   </thead>
                   <tbody id="pending-validation-rows"></tbody>
