Expose tracker templates for watchlist links

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -395,12 +395,14 @@
                       <th>TMDB</th>
                       <th>ID</th>
                       <th>URL</th>
+                      <th>Recherche tracker</th>
                       <th>Actions</th>
                     </tr>
                   </thead>
                   <tbody id="watchlist-rows"></tbody>
                 </table>
               </div>
+              <p class="hint hidden" id="watchlist-trackers-hint">Aucun tracker configuré.</p>
               <p class="hint" id="watchlist-empty">Aucun média dans cette liste.</p>
             </div>
           </section>
@@ -422,6 +424,7 @@
 
     <script src="path_utils.js" defer></script>
     <script src="calendar_window.js" defer></script>
+    <script src="tracker_links.js" defer></script>
     <script src="app.js" defer></script>
   </body>
 </html>
