Expose available CLI commands in scheduler tab

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -165,6 +165,15 @@
               <p class="hint">Aucun scheduler configuré.</p>
             </div>
           </section>
+
+          <section class="panel" id="available-commands-panel">
+            <div class="panel-header">
+              <h2>Commandes disponibles</h2>
+            </div>
+            <div id="available-command-list" class="scheduler-tasks">
+              <p class="hint">Aucune commande CLI détectée.</p>
+            </div>
+          </section>
         </section>
 
         <section
