Add scheduled runs panel to scheduler tab

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -176,6 +176,16 @@
             </div>
           </section>
 
+          <section class="panel" id="scheduler-runs-panel">
+            <div class="panel-header">
+              <h2>Exécutions planifiées</h2>
+            </div>
+            <div id="scheduler-runs-container" class="scheduler-tasks">
+              <ul id="scheduler-runs-list"></ul>
+              <p class="hint">Aucune exécution planifiée.</p>
+            </div>
+          </section>
+
           <section class="panel" id="available-commands-panel">
             <div class="panel-header">
               <h2>Commandes disponibles</h2>
