Add unscheduled template command listing

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -186,6 +186,15 @@
             </div>
           </section>
 
+          <section class="panel" id="unscheduled-templates-panel">
+            <div class="panel-header">
+              <h2>Commandes de template non planifiées</h2>
+            </div>
+            <div id="unscheduled-template-list" class="scheduler-tasks">
+              <p class="hint">Aucune commande de template détectée.</p>
+            </div>
+          </section>
+
           <section class="panel" id="available-commands-panel">
             <div class="panel-header">
               <h2>Commandes disponibles</h2>
