Add search support to collection tab

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -297,6 +297,11 @@
             <div class="panel-header">
               <h2>Collection</h2>
               <div class="panel-tools">
+                <form id="collection-search-form" class="collection-search" role="search" autocomplete="off">
+                  <label for="collection-search">Rechercher un film</label>
+                  <input id="collection-search" name="search" type="search" placeholder="Titre" />
+                  <button type="submit">Chercher</button>
+                </form>
                 <label for="collection-sort">Tri</label>
                 <select id="collection-sort" name="sort">
                   <option value="year">Année</option>
