Add collection type filtering

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -308,6 +308,13 @@
                   <option value="date">Date d'ajout</option>
                   <option value="title">Titre</option>
                 </select>
+                <label for="collection-type">Type</label>
+                <select id="collection-type" name="type">
+                  <option value="">Type</option>
+                  <option value="movie">Films</option>
+                  <option value="tv">Shows</option>
+                  <option value="all">Tous</option>
+                </select>
                 <div class="actions">
                   <button id="collection-prev" type="button">Précédent</button>
                   <span id="collection-page" class="calendar-window-label" aria-live="polite">Page 1</span>
