Enhance collection details display

--- a/app/web/index.html
+++ b/app/web/index.html
@@ -329,6 +329,16 @@
           </section>
         </section>
 
+        <div id="collection-modal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="collection-modal-title">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h3 id="collection-modal-title">Détails</h3>
+              <button id="collection-modal-close" type="button" aria-label="Fermer">×</button>
+            </div>
+            <div id="collection-modal-body"></div>
+          </div>
+        </div>
+
         <section
           class="tab-panel"
           data-tab="config"
